# apiserver/openapi.yaml
@@ -879,7 +879,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/CadastroRepresentacao'
+                $ref: '#/components/schemas/RespostaPadrao'
         400:
           description: ID inválido
           content: {}
@@ -889,7 +889,6 @@ paths:
         default:
           description: Erro inesperado
           content: {}
-
 components:
   schemas:
     EntradaSaida:
@@ -984,6 +983,17 @@ components:
       - Rodoviario
       - Aereo
       - Maritimo
+    RespostaPadrao:
+      type: object
+      properties:
+        title:
+          type: string
+        detail:
+          type: string
+          description: Mensagem de erro ou hash do evento transmitido
+        status:
+          type: integer
+          description: HTTP Status code
     Anexos:
       type: object
       properties:
@@ -1045,7 +1055,7 @@ components:
             type: string
             description: Data de nascimento
             format: date
-          representado:
+          cpfcnpjrepresentado:
             type: string
             description: CNPJ/CPF representado
           nomerepresentado:
@@ -1063,27 +1073,17 @@ components:
             description: Fim Período de validade do credenciamento
             format: date-time
           horaentrada:
-            type: string
+            type: integer
             description: Hora comum de entrada
-            format: time
           horasaida:
-            type: string
+            type: integer
             description: Hora comum de saida
-            format: time
           permissao:
             type: string
             description: Areas permitidas acesso
           materiais:
             type: string
             description: Lista materiais/ferramentas de trabalho
-          dataativacao:
-            type: string
-            description: Ultima data de ativacao deste cadastramento
-            format: date-time
-          datainativacao:
-            type: string
-            description: Informado apenas quando o credenciamento desta pessoa nao e mais valido
-            format: date-time
           motivacao:
             type: string
             description: Motivacao de acesso ao terminal
@@ -1166,14 +1166,15 @@ components:
             description: Fim Período de validade do credenciamento
             format: date-time
           horaentrada:
-            type: string
+            type: integer
             description: Hora comum de entrada
-            format: time
           horasaida:
-            type: string
+            type: integer
             description: Hora comum de saida
-            format: time
           permissao:
+            type: string
+            description: Areas permitidas acesso
+          motivacao:
             type: string
             description: Areas permitidas acesso
     AgendamentoVeiculo:
@@ -1625,13 +1626,20 @@ components:
         IDEvento:
           type: integer
           description: IDEvento a partir do qual pesquisar (maior que) OU
-        dataevento:
+        recinto:
           type: string
-          description: Data de ocorrência do evento - inicio de pesquisa
-          format: date-time
+          description: Codigo do Recinto a pesquisar
         tipoevento:
           type: string
           description: Nome da classe de Evento
+        datainicial:
+          type: string
+          description: Data de ocorrência física do evento - inicio de pesquisa
+          format: date-time
+        datafinal:
+          type: string
+          description: Data de ocorrência física do evento - final de pesquisa
+          format: date-time
     FiltroPosicaoConteiner:
       type: object
       properties:
